--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,36 @@
 /*  your css code here. If applicable */
+.nav-bar{
+	display:flex;
+	justify-content:space-around;
+	background-color:pink;
+}
+.nav-bar>div{
+	padding:20px;
+	font-weight:700px;
+	font-size:25px;
+	
+}
+.nav-bar>div>a{
+	text-decoration:none;
+	color:black;
+}
+.search{
+	border-radius:9px;
+	border:1px solid black;
+	padding:8px;
+	margin:8px;
+	font-size:20px;
+}
+button{
+	border-radius:12px;
+	border:1px solid search;
+	margin:8px;
+	padding:12px;
+	color:green;
+	font-size:20px;
+}
+@media screen and (min-width: 480px){
+	.nav-bar{
+		disply-direction:colomn;
+	}
+}
